--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "react-lottie-player": "^1.5.5",
     "tailwindcss": "^3.3.3"
   }
